# AutoML

./: .gitignore  ACHIEVEMENT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  FEATURES.md  INSTALL.md  LICENSE  PRE_PUSH_CHECKLIST.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  README.md  README_ULTIMATE.md  SECURITY.md  SSH_SETUP.md  STATUS.md  VALIDATION_REPORT.md  pyproject.toml  pyproject.toml.backup  requirements.txt
.github/workflows/: ci.yml  codeql.yml
configs/: advanced_ensemble.yaml  gpu_accelerated.yaml  iris_classification.yaml
docs/: FEATURES.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md
examples/: complete_pipeline.py  complete_workflow.py  production_scale.py  ultimate_demo.py
src/automl/: __init__.py  _version.py  cli.py
src/automl/benchmarks/: __init__.py
src/automl/caching/: __init__.py  redis_cache.py
src/automl/core/: __init__.py  config.py  engine.py  events.py  registry.py
src/automl/dashboard/: __init__.py  app.py
src/automl/datasets/: __init__.py  base.py  builtin.py  distributed.py
src/automl/docs/: __init__.py
src/automl/ensemble/: __init__.py  advanced.py
src/automl/explainability/: __init__.py
src/automl/metalearning/: __init__.py
src/automl/monitoring/: __init__.py  metrics.py
src/automl/multimodal/: __init__.py
src/automl/nas/: __init__.py  custom_nas.py
src/automl/optimizers/: __init__.py  base.py  optuna_optimizer.py  random_search.py  ray_optimizer.py
src/automl/pipelines/: __init__.py  advanced.py  base.py  sklearn.py
src/automl/security/: __init__.py
src/automl/serving/: __init__.py  api.py
src/automl/tracking/: __init__.py  mlflow_integration.py
src/automl/utils/: __init__.py  logging.py  serialization.py  validation.py
src/automl/validation/: __init__.py  data_quality.py
tests/: conftest.py  test_engine.py  test_security.py  test_validation.py
