[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl"
version = "0.1.0"
description = "State-of-the-art AutoML framework with production-ready features"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Jainam Patel", email = "jainampatel1673@gmail.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Jainam1673/AutoML"
Repository = "https://github.com/Jainam1673/AutoML.git"
Documentation = "https://github.com/Jainam1673/AutoML#readme"

[project.scripts]
automl = "automl.cli:app"

[tool.ruff]
line-length = 110
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
